--- a/app.wxss
+++ b/app.wxss
@@ -8,3 +8,30 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 }
+
+.map_container{ 
+    height: 300px; 
+    width: 100%; 
+} 
+
+.map{
+  width: 100%;
+  height: 100%;
+}
+
+.btn-group button{
+    margin:10rpx;
+}
+
+.weather{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #4D8AD7;
+  color: #fff;
+  font-size: 18px;
+  padding-top: 200rpx;
+  padding-left: 150rpx;
+}
