--- a/pages/amap/amap.wxml
+++ b/pages/amap/amap.wxml
@@ -1,7 +1,16 @@
 <view class="map_container">
   <map class="map" id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" bindmarkertap="makertap"></map>
 </view>
-<view class="map_text">
+<!--<view class="map_text">
   <text class="h1">{{textData.name}}</text>
   <text>{{textData.desc}}</text>
+</view>-->
+<view class="btn-group">
+<button type="primary" size="mini"  bindtap="weather">天气</button>
+<button type="primary" size="mini"  bindtap="onSearch">酒店</button>
+</view>
+<view class="place_info">
+  <text>{{placeData.title}}</text>
+  <text>{{placeData.address}}</text>
+  <text>{{placeData.telephone}}</text>
 </view>
