--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,10 +1,12 @@
-<!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
+<view class="map_container">
+  <map class="map" id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" bindmarkertap="makertap"></map>
+</view>
+<view class="btn-group">
+<button type="primary" size="mini"  bindtap="weather">天气</button>
+<button type="primary" size="mini"  bindtap="onSearch">酒店</button>
+</view>
+<view class="place_info">
+  <text>{{placeData.title}}</text>
+  <text>{{placeData.address}}</text> 
+  <text>{{placeData.telephone}}</text>
 </view>
