--- a/pages/baidu/baidu.wxml
+++ b/pages/baidu/baidu.wxml
@@ -10,6 +10,7 @@
 <view class="btn-group">
 <button type="primary" size="mini"  bindtap="weather">天气</button>
 <button type="primary" size="mini"  bindtap="onSearch">酒店</button>
+<button type="primary" size="mini"  bindtap="onRegeo">地址</button>
 </view>
 <view class="place_info"> 
   <text>{{placeData.title}}</text> 
