--- a/pages/baidu/baidu.wxml
+++ b/pages/baidu/baidu.wxml
@@ -1,3 +1,4 @@
+<scroll-view scroll-y="true">
 <view class="section"> 
   <input placeholder="输入关键字" auto-focus type="text" bindinput="onSuggest"/> 
 </view> 
@@ -17,3 +18,4 @@
   <text>{{placeData.address}}</text> 
   <text>{{placeData.telephone}}</text> 
 </view>
+</scroll-view>
