--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,3 +1,10 @@
+<scroll-view scroll-y="true">
+<view class="section"> 
+  <input placeholder="输入关键字" auto-focus type="text" bindinput="onSuggest"/> 
+</view> 
+<view class="sug_info"> 
+  <text>{{sugData}}</text> 
+</view>
 <view class="map_container">
   <map class="map" id="map" longitude="{{longitude}}" latitude="{{latitude}}" scale="14" show-location="true" markers="{{markers}}" bindmarkertap="makertap"></map>
 </view>
@@ -10,3 +17,4 @@
   <text>{{placeData.address}}</text> 
   <text>{{placeData.telephone}}</text>
 </view>
+</scroll-view>
